--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"type": "cppbuild",
 			"label": "C/C++: g++ sestavit aktivní soubor",
-			"command": "/usr/bin/g++",
+			"command": "g++",
 			"args": [
 				"-g",
 				"${file}",
